before fixing the otp flow
